--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^4.1.1",
+    "request": "^2.88.2",
+    "themeparks": "^5.1.53"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
