--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.15.0",
+    "firebase-admin": "^11.3.0",
+    "firebase-functions": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "themeparks": "^5.1.53",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
