--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-functions": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "^2.1.3",
     "themeparks": "^5.1.53",
     "web-vitals": "^2.1.4"
