--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^3.3.0",
+    "react-to-print": "^2.14.11",
     "themeparks": "^5.1.53",
     "web-vitals": "^2.1.4"
   },
